--- a/admin/home/css/theme.css
+++ b/admin/home/css/theme.css
@@ -4668,6 +4668,71 @@ section {
     color: #fa4251;
 }
 
+.table-data34 thead {
+    background: #333;
+}
+
+.table-data34 thead tr th {
+    font-size: 10px;
+	color: #fff;
+	text-transform: capitalize;
+	text-align: center;
+	font-weight: 300;
+}
+
+.table-data34 thead tr th:first-child {
+    -webkit-border-top-left-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    border-top-left-radius: 3px;
+}
+
+.table-data34 thead tr th:last-child {
+    -webkit-border-top-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    border-top-right-radius: 3px;
+}
+
+.table-data34 thead tr th:last-child {
+    text-align: center;
+}
+
+.table-data34 tbody tr td:last-child {
+    text-align: center;
+}
+
+.table-data34 tbody tr {
+    border-left: 1px solid #e5e5e5;
+    border-right: 1px solid #e5e5e5;
+}
+
+.table-data34 tbody tr:last-child td:first-child {
+    -webkit-border-bottom-left-radius: 8px;
+    -moz-border-radius-bottomleft: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.table-data34 tbody tr:last-child td:last-child {
+    -webkit-border-bottom-right-radius: 8px;
+    -moz-border-radius-bottomright: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.table-data34 tbody td {
+    border-bottom: 1px solid #f5f5f5;
+    background: #fff;
+    font-size: 14px;
+    color: #808080;
+}
+
+.table-data34 tbody td.process {
+    color: #00ad5f;
+}
+
+.table-data34 tbody td.denied {
+    color: #fa4251;
+}
+
+/*---------------*/
 .table-data3 thead {
     background: #333;
 }
@@ -4675,10 +4740,10 @@ section {
 .table-data3 thead tr th {
     font-size: 12px;
     color: #fff;
-    font-weight: 500;
+    font-weight: 400;
     text-transform: capitalize;
-    padding: 15px;
-	text-align: center;
+    padding: 18px 40px;
+    padding-right: 10px;
 }
 
 .table-data3 thead tr th:first-child {
@@ -4694,11 +4759,13 @@ section {
 }
 
 .table-data3 thead tr th:last-child {
-    text-align: center;
+    text-align: right;
+    padding-right: 50px;
 }
 
 .table-data3 tbody tr td:last-child {
-    text-align: center;
+    text-align: right;
+    padding-right: 50px;
 }
 
 .table-data3 tbody tr {
